Trying to fix weird issue on mobile

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -179,6 +179,8 @@ main.game {
   max-width: unset;
   height: 100%;
   width: 100%;
+  max-height: 100%;
+  max-width: 100%;
   display: flex;
   justify-content: center;
   align-items: center;
